[package]
name = "band-agent-rs"
version = "0.1.0"
edition = "2021"
description = "Autonomous instrument agent with spectral identity, conservation envelope, and t-minus timing"
license = "MIT"
repository = "https://github.com/SuperInstance/band-agent-rs"
keywords = ["music", "agent", "spectral", "conservation", "midi"]
categories = ["multimedia::audio", "simulation"]

[dependencies]
