[package]
name = "band-agent-rs"
version = "0.1.0"
edition = "2021"
description = "Autonomous agent with spectral identity and conservation tracking for Self-Improving Band"
license = "MIT"
repository = "https://github.com/SuperInstance/band-agent-rs"
keywords = ["agent", "music", "spectral", "midi", "band"]
categories = ["multimedia::audio", "simulation"]
